feat: Add metrics support for EL jobs and improve job cancellation logic
Scope:
- Added `job_kind` label to job metrics to differentiate between BPMN element and EL jobs.
- Refactored `JobMetricsTests` to be parameterized.