@@ -22,6 +22,7 @@ import io.camunda.zeebe.protocol.record.RecordValueWithVariablesAssert;
 import io.camunda.zeebe.protocol.record.ValueType;
 import io.camunda.zeebe.protocol.record.intent.JobBatchIntent;
 import io.camunda.zeebe.protocol.record.value.JobBatchRecordValueAssert;
+import io.camunda.zeebe.protocol.record.value.JobKind;
 import io.camunda.zeebe.protocol.record.value.JobRecordValue;
 import io.camunda.zeebe.protocol.record.value.JobRecordValueAssert;
 import io.camunda.zeebe.protocol.record.value.TenantOwned;
@@ -70,15 +71,17 @@ final class JobBatchCollectorTest {
 
     // when - set up the evaluator to only accept the first job
     lengthEvaluator.canWriteEventOfLength = (length) -> toggle.getAndSet(false);
-    final Either<TooLargeJob, Integer> result = collector.collectJobs(record);
+    final Either<TooLargeJob, Map<JobKind, Integer>> result = collector.collectJobs(record);
 
     // then
     final JobBatchRecord batchRecord = record.getValue();
     EitherAssert.assertThat(result)
         .as("should have activated only one job successfully")
         .right()
-        .isEqualTo(1);
-    JobBatchRecordValueAssert.assertThat(batchRecord).hasOnlyJobKeys(jobs.get(0).key).isTruncated();
+        .isEqualTo(Map.of(JobKind.BPMN_ELEMENT, 1));
+    JobBatchRecordValueAssert.assertThat(batchRecord)
+        .hasOnlyJobKeys(jobs.getFirst().key)
+        .isTruncated();
   }
 
   @Test
@@ -90,14 +93,14 @@ final class JobBatchCollectorTest {
 
     // when - set up the evaluator to accept no jobs
     lengthEvaluator.canWriteEventOfLength = (length) -> false;
-    final Either<TooLargeJob, Integer> result = collector.collectJobs(record);
+    final Either<TooLargeJob, Map<JobKind, Integer>> result = collector.collectJobs(record);
 
     // then
     final JobBatchRecord batchRecord = record.getValue();
     EitherAssert.assertThat(result)
         .as("should return excessively large job")
         .left()
-        .hasFieldOrPropertyWithValue("key", jobs.get(0).key);
+        .hasFieldOrPropertyWithValue("key", jobs.getFirst().key);
     JobBatchRecordValueAssert.assertThat(batchRecord).hasNoJobKeys().hasNoJobs().isTruncated();
   }
 
@@ -152,12 +155,17 @@ final class JobBatchCollectorTest {
     record.getValue().setMaxJobsToActivate(1);
 
     // when
-    final Either<TooLargeJob, Integer> result = collector.collectJobs(record);
+    final Either<TooLargeJob, Map<JobKind, Integer>> result = collector.collectJobs(record);
 
     // then
     final JobBatchRecord batchRecord = record.getValue();
-    EitherAssert.assertThat(result).as("should collect only the first job").right().isEqualTo(1);
-    JobBatchRecordValueAssert.assertThat(batchRecord).hasJobKeys(jobs.get(0).key).isNotTruncated();
+    EitherAssert.assertThat(result)
+        .as("should collect only the first job")
+        .right()
+        .isEqualTo(Map.of(JobKind.BPMN_ELEMENT, 1));
+    JobBatchRecordValueAssert.assertThat(batchRecord)
+        .hasJobKeys(jobs.getFirst().key)
+        .isNotTruncated();
   }
 
   @Test
